--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
       box-sizing: border-box;
     }
 
+    <audio autoplay loop>
+  <source src="musica.mp3" type="audio/mpeg">
+  Seu navegador não suporta áudio.
+</audio>
+
     body {
       background-color: #fff0f5;
       font-family: 'Arial', sans-serif;
