--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   </p>
   <h2>Quer namorar comigo? </h2>
   <div class="button-container" id="btnContainer">
-    <button class="btn-sim" onclick="alert('Siiiiiim! 🥰 Eu te amo!')">Sim</button>
+    <button class="btn-sim" onclick="alert('🥰 Eu te amo!')">Sim</button>
     <button class="btn-nao" id="btnNao">Não</button>
   </div>
 
