--- a/index.html
+++ b/index.html
@@ -82,6 +82,8 @@
     Seu navegador não suporta áudio.
   </audio>
 
+  <button onclick="document.getElementById('musica').play()">Tocar música</button>
+
   <h1>Oi, branquinha 💖</h1>
   <p>
     Desde que você entrou na minha vida, tudo ficou mais bonito. <br />
