--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
     btnSim.addEventListener("click", () => {
       audio.play();
-      alert('Siiiiiim! 🥰 Eu te amo!');
+      alert('🥰 Eu te amo!');
     });
   </script>
 </body>
