--- a/index.html
+++ b/index.html
@@ -15,17 +15,16 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
-      min-height: 100vh;
       text-align: center;
       padding: 20px;
-      overflow: hidden;
-      position: relative;
+      margin: 0;
     }
 
     h1 {
       color: #e91e63;
-      font-size: 2.2rem;
+      font-size: 2rem;
+      margin-top: 10px;
+      margin-bottom: 20px;
     }
 
     p {
@@ -76,11 +75,13 @@
 </head>
 <body>
 
-  <!-- Música de fundo, sem autoplay -->
-  <audio id="musica" loop>
-    <source src="musica.mp3" type="audio/mpeg" />
+  <!-- Música de fundo -->
+  <audio id="musica" autoplay loop>
+    <source src="musica.mp3" type="audio/mpeg">
     Seu navegador não suporta áudio.
   </audio>
+
+  <button onclick="document.getElementById('musica').play()">Tocar música</button>
 
   <h1>Oi, branquinha 💖</h1>
   <p>
@@ -89,17 +90,16 @@
   </p>
   <h2>Quer namorar comigo? </h2>
   <div class="button-container" id="btnContainer">
-    <button class="btn-sim" id="btnSim">Sim</button>
+    <button class="btn-sim" onclick="alert('🥰 Eu te amo!')">Sim</button>
     <button class="btn-nao" id="btnNao">Não</button>
   </div>
 
   <script>
     const btnNao = document.getElementById("btnNao");
-    const btnSim = document.getElementById("btnSim");
     const container = document.getElementById("btnContainer");
-    const audio = document.getElementById("musica");
 
     function moverBotao() {
+      const containerRect = container.getBoundingClientRect();
       const btnWidth = btnNao.offsetWidth;
       const btnHeight = btnNao.offsetHeight;
 
@@ -114,14 +114,10 @@
     }
 
     btnNao.addEventListener("mouseover", moverBotao);
+
     btnNao.addEventListener("touchstart", function(e) {
       e.preventDefault();
       moverBotao();
-    });
-
-    btnSim.addEventListener("click", () => {
-      audio.play();
-      alert('🥰 Eu te amo!');
     });
   </script>
 </body>
