--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
   <!-- Tela de clique inicial -->
   <div class="overlay" id="overlay">
-    <button onclick="iniciar()">Clique aqui</button>
+    <button onclick="iniciar()">Só toque se estiver preparada 😍</button>
   </div>
 
   <h1>Oi, branquinha 💖</h1>
