--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <button onclick="iniciar()">Só toque se estiver preparada 😍</button>
   </div>
 
-  <h1>Oi, branquinha 💖</h1>
+  <h1>Oi, Branquinha 💖</h1>
   <p>
     Desde que você entrou na minha vida, tudo ficou mais bonito. <br />
     Seus sorrisos, suas palavras e seu jeito único me fazem querer estar ao seu lado sempre.
