--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 
   <h1>Oi, Branquinha 💖</h1>
   <p>
-    Desde que você entrou na minha vida, tudo ficou mais bonito. <br />
-    Seus sorrisos, suas palavras e seu jeito único me fazem querer estar ao seu lado sempre.
+    Com você, até os dias comuns se tornam especiais. <br />
+    É por isso que sorrio ao seu lado e sempre quero estar com você. 
   </p>
   <h2>Quer namorar comigo? </h2>
   <div class="button-container" id="btnContainer">
