--- a/index.html
+++ b/index.html
@@ -106,7 +106,10 @@
 
   <!-- Tela de clique inicial -->
   <div class="overlay" id="overlay">
-    <button onclick="iniciar()">Só toque se estiver preparada 😍</button>
+    <button onclick="iniciar()">
+      Só toque se estiver preparada 😍<br />
+      <small>Aumente o som 🔊</small>
+    </button>
   </div>
 
   <h1>Oi, Branquinha 💖</h1>
