--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
   <!-- Tela de clique inicial -->
   <div class="overlay" id="overlay">
     <button onclick="iniciar()">
-      Só toque se estiver preparada 😍<br />
+      Só click se estiver preparada 😍<br />
       <small>Aumente o som 🔊</small>
     </button>
   </div>
